--- a/Burgerking/appsettings.json
+++ b/Burgerking/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "HelloCoreConnection": "Server=.\\sqlserver2017;Database=EfCoreHBO5;Trusted_Connection=True",
+    "LocalDBConnection": "Server=(localdb)\\mssqllocaldb;Database=burgerking;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
